polychem/src/snapshots/polychem__composition_parser__tests__composition_errors-3.snap
---
source: polychem/src/composition_parser.rs
description: "chemical_composition(\"NH2[99Tc]O4-8m+2p\")"
expression: out
---
  × expected '+' or '-', optionally followed by a number, then a particle
  │ (like p or e)
  ╰─▶   × the particle "m" could not be found in the supplied chemical
      database
        help: double-check for typos, or add a new entry to the chemical
      database
      
   ╭────
 1 │ NH2[99Tc]O4-8m+2p 
   ·              ┬
   ·              ╰── particle not found
   ╰────

